# Supply_Chain_Optimization

./: CMakeLists.txt  README.md  Requirements.txt  app.py  inv_optimize.py
frontend/: app.js  index.html  styles.css
src/: main.cpp
src/decision/: decision_engine.cpp  decision_engine.h
src/ingestion/: event_listener.cpp  event_listener.h
src/intelligence/: agent.cpp  agent.h  classifier.cpp  classifier.h
src/models/: demand_model.h  event.h  product.h
src/pipeline/data/: data_processing.py
src/pipeline/models/: clustering.py  forecast.py
src/pipeline/visualization/: 2_Confidence_Plots.py
src/prediction/: monte_carlo.cpp  monte_carlo.h  predictor.cpp  predictor.h
src/processing/: processor.cpp  processor.h
src/storage/: redis_client.cpp  redis_client.h
src/supply/: warehouse.cpp  warehouse.h
src/utils/: logger.h
